[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
typst = "0.13.0"
typst-syntax = "0.13.0"
typst-eval = "0.13.0"
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
phf = "0.11.2"
serde_json = "1.0.108"
comemo = "0.4.0"
derive_builder = "0.12.0"
log = "0.4.20"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "z"
lto = true

[lib.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
